internet_gateway.tf
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name        = format("%s-igw", var.project_name_vpc)
    Environment = var.environment
    Terraform   = "True"
  }
}
