vpc.tf
resource "aws_vpc" "main" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Name        = var.project_name_vpc
    Environment = var.environment
    Terraform   = "True"
  }
}
